refactor and remove pmd issues